# minimalKNN

./: .gitignore  MANIFEST.in  Makefile  README.md  minimalKNN.pyx  pyproject.toml  setup.py
.github/workflows/: build.yml  test_cc.yml  upload_pypi.yml  upload_testpypi.yml
src/: minimalKNN.h
test/: .gitignore  sample_box.cc
