[build-system]
requires = [
  "setuptools>=64",
  "Cython>=0.29",
  "numpy>=1.22",
]
build-backend = "setuptools.build_meta"

[project]
name = "minimalKNN"
version = "0.10"
description = "MinimalKNN: minimal package to construct k-NN Graph"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Ryou Ohsawa", email = "ryou.ohsawa@nao.ac.jp"},
]
maintainers = [
  {name = "Ryou Ohsawa", email = "ryou.ohsawa@nao.ac.jp"},
]
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.5",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/astronasutarou/minimalKNN"

[tool.setuptools]
packages = []
py-modules = []

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux* pp*"
test-command = "python -c \"import minimalKNN; print(minimalKNN.__file__)\""
